# DataForgeX

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: tempCodeRunnerFile.py  test.py
sample_data/: test_data.csv
src/dfx/: __init__.py
src/dfx/cleaning/: __init__.py  data_cleaning.py
src/dfx/data_viz/: __init__.py
src/dfx/model_eval/: __init__.py  classification.py  regression.py  utils.py
src/dfx/preprocessing/: __init__.py  autotype.py  encoding.py  outliers.py  pipeline.py  scaling.py
src/dfx/utils/: agent.py
src/dfx/viz/: visualization.py
