[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforgex"
version = "0.1.5"
description = "DataForgeX: Prep • Plot • Evaluate • Detect"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Prince Saxena" }]
keywords = ["data preprocessing", "machine learning", "data cleaning", "eda", "automation"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "seaborn>=0.13"
]

[project.optional-dependencies]
ml = ["xgboost>=1.7"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
dev = ["pytest", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/<your-user>/DataForgeX"
Issues = "https://github.com/<your-user>/DataForgeX/issues"

[tool.setuptools.packages.find]
where = ["src"]